syntax = "proto3";

package common;

message SignatureRaw {
    int32 algorithm = 1;
    bytes sig = 2;
    bytes pubKey = 3;
}
