syntax = "proto3";

import "github.com/iost-official/go-iost/crypto/signature.proto";
package tx;

message ActionRaw {
    string contract = 1;
    string actionName = 2;
    string data = 3;
}

message TxRaw {
    int64 time = 1;
    int64 expiration = 2;
    int64 gasLimit = 3;
    int64 gasPrice = 4;
    repeated ActionRaw actions = 5;
    repeated string signers = 6;
    repeated crypto.SignatureRaw signs = 7;
    string publisher = 8;
    crypto.SignatureRaw publishSign = 9;
    int64 delaySecond = 10;
}

message ReceiptRaw {
    string funcName = 1;
    string content = 2;
}

message StatusRaw {
    int32 code = 1;
    string message = 2;
}

message TxReceiptRaw {
    bytes txHash = 1;
    int64 gasUsage = 2;
    map<string, int64> RAMUsage = 3;
    StatusRaw status = 4;
    repeated Return returns = 5;
    repeated ReceiptRaw receipts = 6;
}

message Return {
    string funcName = 1;
    string value = 2;
}
